# pubquiz-rs

./: .env.example  Cargo.toml  Rocket.toml  docker-compose.yml
src/: auth.rs  group.rs  main.rs
templates/: edit_quiz.html.hbs  host_dashboard.html.hbs  index.html.hbs  quiz.html.hbs
